--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.mobile.apex">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -11,7 +12,6 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".SplashScreen"
-            android:name=".MainActivity"
             android:label="@string/app_name"
             android:theme="@style/BaseTheme">
             <intent-filter>
@@ -23,6 +23,9 @@
 
         <activity android:name=".IntroScreen" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".MathematicsActivity" />
+        <activity android:name=".MathematicsTopicsDisplayActivity" />
+        <activity android:name=".NoItemInternetImage" />
     </application>
 
 </manifest>
