--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     package="com.mobile.apex">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -10,6 +12,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".PhysicsTopicsDisplay"></activity>
+        <activity android:name=".ApexPhysicsActivity" />
+        <activity android:name=".BiologyTopicsDisplayActivity" />
+        <activity android:name=".ApexBiologyActivity" />
+        <activity android:name=".ChemistryTopicsDisplayActivity" />
+        <activity android:name=".ChemistryActivity" />
         <activity
             android:name=".SplashScreen"
             android:label="@string/app_name"
@@ -20,7 +28,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
         <activity android:name=".IntroScreen" />
         <activity android:name=".MainActivity" />
         <activity android:name=".MathematicsActivity" />
