--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".SplashScreen"
+            android:name=".QuizActivity"
             android:label="@string/app_name"
             android:theme="@style/BaseTheme">
             <intent-filter>
@@ -24,6 +24,7 @@
         <activity android:name=".IntroScreen" />
         <activity android:name=".RegistrationActivity" />
         <activity android:name=".LoginActivity" />
+<!--        <activity android:name=".QuizActivity" />-->
         <activity android:name=".MainActivity" />
         <activity android:name=".MathematicsActivity" />
         <activity android:name=".MathematicsTopicsDisplayActivity" />
