--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".QuizActivity"
+            android:name=".Screens.QuizActivity"
             android:label="@string/app_name"
             android:theme="@style/BaseTheme">
             <intent-filter>
@@ -21,13 +21,15 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".IntroScreen" />
-        <activity android:name=".RegistrationActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:name=".Screens.IntroScreen" />
+        <activity android:name=".Screens.RegistrationActivity"
+            android:windowSoftInputMode="stateAlwaysVisible"/>
+        <activity android:name=".Screens.LoginActivity"
+            android:windowSoftInputMode="stateAlwaysVisible"/>
 <!--        <activity android:name=".QuizActivity" />-->
-        <activity android:name=".MainActivity" />
-        <activity android:name=".MathematicsActivity" />
-        <activity android:name=".MathematicsTopicsDisplayActivity" />
+        <activity android:name=".Screens.MainActivity" />
+        <activity android:name=".Screens.MathematicsActivity" />
+        <activity android:name=".Screens.MathematicsTopicsDisplayActivity" />
         <activity android:name=".NoItemInternetImage" />
     </application>
 
